src/film-database/components/iframe/player/_fdiFramePlayer.scss
@use '/src/sass/functions' as f;
@use '/src/film-database/scss/fdMixins' as m;

.fdiFrame__player {
  position: fixed;
  top: 0;
  right: 0;
  z-index: 1;
  height: 63svh;
  aspect-ratio: 16/9;
  transform: scale(1.3);
  transform-origin: center;
  &::before {
    content: '';
    position: absolute;
    left: 0;
    bottom: 0;
    z-index: 1;
    width: 100%;
    height: 30%;
    background: linear-gradient(to top, rgb(0, 0, 1) 50%, rgba(0, 0, 0, 0.5) 80%, rgba(0, 0, 0, 0) 100%);
    pointer-events: none;
  }
  @media (min-width: 1440px) {
    &::after {
      content: '';
      position: absolute;
      left: -1px;
      top: 0;
      width: 15%;
      height: 100%;
      background: linear-gradient(to left, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 50%, rgba(0, 0, 0, 1) 100%);
      pointer-events: none;
    }
  }
  @media (max-width: 1439px) {
    width: 100svw;
  }
  & picture img,
  & iframe {
    position: absolute;
    top: -10px;
    right: 0;
  }
  & iframe {
    aspect-ratio: inherit;
    pointer-events: none;
    height: inherit;
    // YouTube IFrame Player API Requirements (16/9)
    min-width: 480px;
    min-height: 270px;
    @media (max-width: 1439px) {
      width: inherit;
    }
  }
}

